<resources>
    <string name="app_name">Caffiato</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="cd_logo">logo</string>
    <string name="hint_username">Username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="terms_of_service">I agree with Terms of service</string>
    <string name="register">Register</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_to_register">Not a member? Join the Go To Coffee app!</string>
    <string name="register_to_login">Already a member? Click here.</string>
    <string name="save">Save</string>
    <string name="about_text">\"You are just a person, lonely, longing for some company. 2 years of limited social interaction changed you, made you appreciate having a drink with your friend. But even now, when things are back to normal, times are even harder. Cost of just existing is too high.. Than there is food, gas, every material, electronic, you name it.. Prices are spiking like crazy and no one knows when they will stop growing.\nWar is not over, and who knows how close Putin is to sending those big pointy missiles all world.Crime and murder rates have skyrocketed since last year\n.Oh, and monkeypox virus is a thing.\nSo, we are happy to inform you we have found the solution, and since you\'re reading this, you\'re almost on your way to eternal cycle of happiness! You see, when you pay for your and your friends drink in cafe that is showed in our app, scan the qr code on the receipt with built in qr scanner, and you will get the very valuable points. As you can see, you will still fight with your friend on who will pay the bill, but now with an actual purpose! And so the cycle begins! Than you spend those points in all sorts of cafes who have all sorts of offers with all sorts of discounts that save you money. You can get extra points by completing challenge tasks on home page.\nSooo.. get up, socialize, have a drink to earn points, earn points to save money, save money to be able to socialize more!\n\nMade by Algebra students Sandro(Šandor), Stjepan(Stipe), Fran(Franz), Matija(Matija) in the summer of 2022.\n\n\"</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service_about">Terms of service</string>
    <string name="about_bold"><b>About</b></string>
    <string name="privacy_policy_bold"><b>Privacy policy</b></string>
    <string name="terms_of_service_about_bold"><b>Terms of service</b></string>
    <string name="terms_of_service_tag">Terms of service</string>
    <string name="privacy_policy_tag">Privacy policy</string>
    <string name="what_can_we_do">What can we do to improve our app:</string>
    <string name="delete_account">Delete account</string>
    <string name="change_language">Change language</string>
    <string name="caffe_name">Caffe:</string>
    <string name="caffe_address">Address:</string>
    <string name="points">Points:</string>
    <string name="price">Price:</string>
    <string name="expires">Expires:</string>
    <string name="hi">Hi,</string>
    <string name="deals_offers">Deals/Offers:</string>
    <string name="challenges">Challenges:</string>
    <string name="click_on_the_caffe_location">Click on the caffe location to see its deals</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="scan">Scan</string>
    <string name="more">More</string>
</resources>