<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_transparent"
        android:contentDescription="@string/cd_logo" />


    <EditText
        android:id="@+id/etLogEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="@string/hint_email"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="20dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etLogPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="@string/hint_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_round"
        android:textAllCaps="false"
        android:text="@string/log_in"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginToRegister"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/login_to_register" />


</LinearLayout>