<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:background="@drawable/login_background"
    tools:context=".MoreFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:text="@string/profile"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_username"
        android:background="@drawable/btn_more"
        android:drawablePadding="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:text="@string/settings"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_settings"
        android:background="@drawable/btn_more"
        android:drawablePadding="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFeedback"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:text="@string/feedback"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_feedback"
        android:background="@drawable/btn_more"
        android:drawablePadding="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:text="@string/about"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_about"
        android:background="@drawable/btn_more"
        android:drawablePadding="20dp" />

    <View
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginHorizontal="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_round"
        android:textAllCaps="false"
        android:text="@string/log_out"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>