<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:background="@drawable/login_background">


    <TextView
        android:id="@+id/tvAbout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:clickable="true"
        android:textSize="18sp"
        android:text="@string/about" />


    <TextView
        android:id="@+id/tvTOF"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/terms_of_service_tag" />


    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/privacy_policy_tag" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border">
        <TextView
            android:id="@+id/tvAboutText"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="15sp"
            tools:text="@tools:sample/lorem/random" />

    </ScrollView>


</LinearLayout>