<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_username"
        android:contentDescription="@string/cd_logo" />


    <TextView
        android:id="@+id/tvProfileEmail"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="15sp"
        tools:text="iivic@racunarstvo.hr" />

    <EditText
        android:id="@+id/etEditUsername"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="SandroTheThunder"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_round"
        android:textAllCaps="false"
        android:text="@string/save"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteAcc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_delete_acc"
        android:textAllCaps="false"
        android:text="@string/delete_account"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="18sp"/>

</LinearLayout>