<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="205dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@android:color/holo_blue_dark">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/tvDealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="Kava + cedevita"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/caffe_name"/>
            <TextView
                android:id="@+id/tvCaffeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Old School Caffe"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/caffe_address"/>
            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Ilica 234"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/points"/>
            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="50"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="20"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="kn"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>